# sbbof

./: CMakeLists.txt  README.md
include/: httplib.h
settings/: cmake-kits.json  win_CMakeLists.txt
src/: main.cpp
src/auth/: auth.cpp  auth.h
src/menu/: menu.cpp  menu.h
src/user/: user.cpp  user.h
src/utils/: utils.cpp  utils.h
